--- a/templates/about.html
+++ b/templates/about.html
@@ -1,3 +1,3 @@
 <h1> About Me </h1>
-<p>This page was created to learn Django. Nothing else to see here.</p>
+<h2>This page was created to learn Django. Nothing else to see here.</h2>
 <a href={% url 'home' %}>Back to Home</a>
